--- a/index.html
+++ b/index.html
@@ -8,93 +8,188 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #020617; color: #f8fafc; }
-        .glass-panel { 
-            background: rgba(255, 255, 255, 0.02); 
-            backdrop-filter: blur(20px); 
-            border: 1px solid rgba(255, 255, 255, 0.08); 
-            border-radius: 24px;
-        }
-        .gradient-text { 
-            background: linear-gradient(135deg, #60A5FA 0%, #C084FC 100%); 
-            -webkit-background-clip: text; 
-            -webkit-text-fill-color: transparent; 
-        }
-        .ai-glow {
-            position: absolute;
-            width: 400px;
-            height: 400px;
-            background: radial-gradient(circle, rgba(59, 130, 246, 0.15) 0%, rgba(0, 0, 0, 0) 70%);
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-        }
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background-color: #020617; color: #f8fafc; margin: 0; }
+        .glass-panel { background: rgba(255, 255, 255, 0.02); backdrop-filter: blur(20px); border: 1px solid rgba(255, 255, 255, 0.08); border-radius: 24px; }
+        .gradient-text { background: linear-gradient(135deg, #60A5FA 0%, #C084FC 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        .hidden-content { display: none !important; }
+        input { background: rgba(255, 255, 255, 0.05) !important; border: 1px solid rgba(255, 255, 255, 0.1) !important; color: white !important; outline: none; }
+        .ai-glow { position: absolute; width: 400px; height: 400px; background: radial-gradient(circle, rgba(59, 130, 246, 0.1) 0%, rgba(0, 0, 0, 0) 70%); top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: -1; }
     </style>
 </head>
 <body class="min-h-screen">
 
     <div class="fixed inset-0 z-[-2] opacity-20" style="background-image: radial-gradient(#1e293b 1px, transparent 1px); background-size: 40px 40px;"></div>
 
-    <header class="max-w-7xl mx-auto px-8 py-10 flex justify-center">
-        <div class="flex items-center gap-3">
-            <div class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-xl flex items-center justify-center shadow-lg shadow-blue-500/20">
-                <i data-lucide="bar-chart-3" class="text-white w-6 h-6"></i>
+    <div id="auth-overlay" class="fixed inset-0 z-[100] bg-[#020617] flex items-center justify-center px-6">
+        <div class="ai-glow"></div>
+        
+        <div id="login-box" class="glass-panel p-8 w-full max-w-md shadow-2xl">
+            <div class="flex flex-col items-center mb-8">
+                <div class="w-12 h-12 bg-gradient-to-br from-blue-500 to-purple-600 rounded-xl flex items-center justify-center mb-4">
+                    <i data-lucide="bar-chart-3" class="text-white w-6 h-6"></i>
+                </div>
+                <h2 class="text-2xl font-bold">Stoxara Intelligence</h2>
             </div>
-            <span class="text-3xl font-extrabold tracking-tighter">STOXARA</span>
+            <div id="login-error" class="hidden bg-red-500/10 border border-red-500/50 text-red-400 p-3 rounded-xl text-xs mb-4 text-center"></div>
+            <div class="space-y-4">
+                <input type="email" id="l-email" placeholder="Email" class="w-full p-4 rounded-xl">
+                <input type="password" id="l-pass" placeholder="Password" class="w-full p-4 rounded-xl">
+                <button id="btn-login" class="w-full bg-white text-black font-bold py-4 rounded-xl hover:bg-slate-200 transition-all">Log In</button>
+            </div>
+            <p class="text-center text-sm mt-6 text-slate-500">New? <span onclick="window.switchView('signup')" class="text-blue-400 cursor-pointer font-bold">Create Account</span></p>
         </div>
-    </header>
 
-    <main class="max-w-5xl mx-auto px-6">
-        <section class="text-center mb-16">
-            <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-6">
-                Master the Market with <br><span class="gradient-text">Conversation.</span>
-            </h1>
-            <p class="text-slate-400 text-lg md:text-xl max-w-2xl mx-auto leading-relaxed">
-                Ask Stoxara about any stock sentiment or technical indicator and get <span class="text-blue-400 font-semibold">institutional-grade answers</span> in seconds.
-            </p>
-        </section>
-
-        <section class="relative z-10 mb-24">
-            <div class="ai-glow"></div>
-            <div class="glass-panel p-2 min-h-[500px] shadow-2xl overflow-hidden">
-                <script src='https://www.noupe.com/embed/019b8a2a637c706ea2ffaf911981d4912d73.js'></script>
+        <div id="signup-box" class="glass-panel p-8 w-full max-w-md shadow-2xl hidden">
+            <h2 class="text-2xl font-bold mb-6">Request Access</h2>
+            <div class="space-y-4">
+                <input type="email" id="s-email" placeholder="Email Address" class="w-full p-4 rounded-xl">
+                <input type="password" id="s-pass" placeholder="Create Password" class="w-full p-4 rounded-xl">
+                <button id="btn-signup" class="w-full bg-blue-600 text-white font-bold py-4 rounded-xl hover:bg-blue-500 transition-all">Sign Up</button>
             </div>
-        </section>
+            <p class="text-center text-sm mt-6 text-slate-500">Already verified? <span onclick="window.switchView('login')" class="text-blue-400 cursor-pointer font-bold">Log In</span></p>
+        </div>
 
-        <section class="grid md:grid-cols-3 gap-8 pb-20">
-            <div class="space-y-3">
-                <div class="text-blue-500 bg-blue-500/10 w-10 h-10 rounded-lg flex items-center justify-center">
-                    <i data-lucide="brain" class="w-6 h-6"></i>
+        <div id="verify-box" class="glass-panel p-8 w-full max-w-md shadow-2xl hidden text-center">
+            <i data-lucide="mail" class="w-12 h-12 text-blue-400 mx-auto mb-4"></i>
+            <h2 class="text-2xl font-bold mb-2">Verify your Gmail</h2>
+            <p class="text-slate-400 text-sm mb-8">We've sent a secure link to your inbox.</p>
+            <button onclick="location.reload()" class="w-full bg-white/10 text-white py-4 rounded-xl font-bold">I've Clicked the Link</button>
+        </div>
+    </div>
+
+    <div id="main-content" class="hidden-content">
+        <header class="max-w-7xl mx-auto px-8 py-10 flex justify-between items-center">
+            <div class="flex items-center gap-3">
+                <div class="w-10 h-10 bg-gradient-to-br from-blue-500 to-purple-600 rounded-xl flex items-center justify-center">
+                    <i data-lucide="bar-chart-3" class="text-white w-6 h-6"></i>
                 </div>
-                <h3 class="font-bold text-xl text-white">Advanced Sentiment</h3>
-                <p class="text-slate-400 text-sm leading-relaxed">Understand the market mood instantly. We analyze thousands of data points so you don't have to.</p>
+                <span class="text-3xl font-extrabold tracking-tighter">STOXARA</span>
             </div>
+            <button id="btn-logout" class="bg-white/5 border border-white/10 px-5 py-2 rounded-xl text-slate-400 text-sm hover:text-white transition-all font-semibold">Sign Out</button>
+        </header>
 
-            <div class="space-y-3">
-                <div class="text-purple-500 bg-purple-500/10 w-10 h-10 rounded-lg flex items-center justify-center">
-                    <i data-lucide="gauge" class="w-6 h-6"></i>
+        <main class="max-w-5xl mx-auto px-6">
+            <section class="text-center mb-16">
+                <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-6">
+                    Master the Market with <br><span class="gradient-text">Conversation.</span>
+                </h1>
+            </section>
+
+            <section class="relative z-10 mb-24">
+                <div class="ai-glow"></div>
+                <div id="chatbot-wrapper" class="glass-panel p-2 min-h-[500px] shadow-2xl overflow-hidden flex items-center justify-center">
+                    <div id="loading-ai" class="text-slate-500 flex flex-col items-center gap-3">
+                        <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-500"></div>
+                        Initializing AI...
+                    </div>
                 </div>
-                <h3 class="font-bold text-xl text-white">Technical Indicators</h3>
-                <p class="text-slate-400 text-sm leading-relaxed">Get RSI, Moving Averages, and Volume profiles just by asking a simple question.</p>
-            </div>
+            </section>
 
-            <div class="space-y-3">
-                <div class="text-emerald-500 bg-emerald-500/10 w-10 h-10 rounded-lg flex items-center justify-center">
-                    <i data-lucide="shield-check" class="w-6 h-6"></i>
+            <section class="grid md:grid-cols-3 gap-8 pb-20">
+                <div class="space-y-3">
+                    <div class="text-blue-500 bg-blue-500/10 w-10 h-10 rounded-lg flex items-center justify-center"><i data-lucide="brain" class="w-6 h-6"></i></div>
+                    <h3 class="font-bold text-xl text-white">Advanced Sentiment</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed">Understand market mood instantly.</p>
                 </div>
-                <h3 class="font-bold text-xl text-white">Institutional Grade</h3>
-                <p class="text-slate-400 text-sm leading-relaxed">No fluff. Just raw, accurate data delivered through a sophisticated AI interface.</p>
-            </div>
-        </section>
-    </main>
+                <div class="space-y-3">
+                    <div class="text-purple-500 bg-purple-500/10 w-10 h-10 rounded-lg flex items-center justify-center"><i data-lucide="gauge" class="w-6 h-6"></i></div>
+                    <h3 class="font-bold text-xl text-white">Technical Indicators</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed">RSI and Volume analysis via chat.</p>
+                </div>
+                <div class="space-y-3">
+                    <div class="text-emerald-500 bg-emerald-500/10 w-10 h-10 rounded-lg flex items-center justify-center"><i data-lucide="shield-check" class="w-6 h-6"></i></div>
+                    <h3 class="font-bold text-xl text-white">Institutional Grade</h3>
+                    <p class="text-slate-400 text-sm leading-relaxed">Accurate data delivered instantly.</p>
+                </div>
+            </section>
+        </main>
 
-    <footer class="border-t border-white/5 py-12 text-center text-slate-600 text-sm italic">
-        Powered by Stoxara Intelligence &bull; 2026
-    </footer>
+        <footer class="border-t border-white/5 py-12 text-center text-slate-600 text-sm italic">
+            Powered by Stoxara Intelligence &bull; 2026
+        </footer>
+    </div>
 
-    <script>
-        // Refresh icons
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, sendEmailVerification, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyB4pWQ0nCrXNUnXdOopWZ3hGZwlGs3qtFU",
+            authDomain: "stoxara.firebaseapp.com",
+            projectId: "stoxara",
+            storageBucket: "stoxara.firebasestorage.app",
+            messagingSenderId: "103544167886",
+            appId: "1:103544167886:web:060a19111680dbd35f5f9f",
+            measurementId: "G-B6Z3PRFWP5"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+
+        // UI HELPERS
+        window.switchView = (view) => {
+            document.getElementById('login-box').classList.add('hidden');
+            document.getElementById('signup-box').classList.add('hidden');
+            document.getElementById('verify-box').classList.add('hidden');
+            document.getElementById(view + '-box').classList.remove('hidden');
+        };
+
+        // AUTH FUNCTIONS
+        const handleLogin = async () => {
+            const email = document.getElementById('l-email').value;
+            const pass = document.getElementById('l-pass').value;
+            try {
+                const cred = await signInWithEmailAndPassword(auth, email, pass);
+                await cred.user.reload();
+                if (!cred.user.emailVerified) {
+                    alert("Please verify your Gmail first!");
+                    await signOut(auth);
+                }
+            } catch (err) { alert("Invalid credentials."); }
+        };
+
+        const handleSignup = async () => {
+            const email = document.getElementById('s-email').value;
+            const pass = document.getElementById('s-pass').value;
+            try {
+                const cred = await createUserWithEmailAndPassword(auth, email, pass);
+                await sendEmailVerification(cred.user);
+                window.switchView('verify');
+            } catch (err) { alert(err.message); }
+        };
+
+        // DYNAMIC CHATBOT LOADING
+        const injectChatbot = () => {
+            const wrapper = document.getElementById('chatbot-wrapper');
+            if (document.getElementById('ai-script')) return; // Don't load twice
+            
+            const script = document.createElement('script');
+            script.id = 'ai-script';
+            script.src = 'https://www.noupe.com/embed/019b8a2a637c706ea2ffaf911981d4912d73.js';
+            script.onload = () => {
+                document.getElementById('loading-ai').style.display = 'none';
+            };
+            wrapper.appendChild(script);
+        };
+
+        // EVENT LISTENERS
+        document.getElementById('btn-login').addEventListener('click', handleLogin);
+        document.getElementById('btn-signup').addEventListener('click', handleSignup);
+        document.getElementById('btn-logout').addEventListener('click', () => signOut(auth).then(() => location.reload()));
+
+        // OBSERVER (This is the "Brain" of the site)
+        onAuthStateChanged(auth, (user) => {
+            if (user && user.emailVerified) {
+                document.getElementById('auth-overlay').classList.add('hidden');
+                document.getElementById('main-content').classList.remove('hidden-content');
+                // LOGIC: Only load the AI bot after verification
+                injectChatbot();
+            } else {
+                document.getElementById('auth-overlay').classList.remove('hidden');
+                document.getElementById('main-content').classList.add('hidden-content');
+            }
+        });
+
         lucide.createIcons();
     </script>
 </body>
