--- a/index.html
+++ b/index.html
@@ -8,88 +8,91 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
-        body { font-family: 'Plus Jakarta Sans', sans-serif; background: #020617; color: #f8fafc; margin: 0; overflow-x: hidden; }
+        body { font-family: 'Plus Jakarta Sans', sans-serif; background: #020617; color: #f8fafc; margin: 0; }
         .bg-glow { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: radial-gradient(circle at 50% 50%, #1e1b4b 0%, #020617 100%); z-index: -2; }
-        .glass-panel { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(25px); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 40px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.8); transition: 0.3s; }
-        .glass-panel:hover { border-color: #60A5FA; transform: translateY(-5px); }
+        .glass-panel { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(25px); border: 1px solid rgba(255, 255, 255, 0.1); border-radius: 40px; box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.8); }
         .gradient-text { background: linear-gradient(135deg, #60A5FA 0%, #C084FC 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-        @keyframes float { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-20px); } }
-        .floating { animation: float 6s ease-in-out infinite; }
+        @keyframes fall { 0% { transform: translateY(-10vh) rotate(0deg); opacity: 0; } 10% { opacity: 0.3; } 90% { opacity: 0.3; } 100% { transform: translateY(110vh) rotate(360deg); opacity: 0; } }
+        .falling { position: fixed; top: -10%; z-index: -1; animation: fall linear infinite; }
     </style>
 </head>
 <body class="min-h-screen">
 
     <div class="bg-glow"></div>
 
-    <div class="fixed top-20 left-10 opacity-20 floating"><i data-lucide="bitcoin" class="w-24 h-24 text-yellow-500"></i></div>
-    <div class="fixed bottom-20 right-10 opacity-20 floating" style="animation-delay: 2s;"><i data-lucide="ethereum" class="w-32 h-32 text-blue-400"></i></div>
+    <div class="falling text-yellow-500/20" style="left: 15%; animation-duration: 12s;"><i data-lucide="bitcoin" class="w-12 h-12"></i></div>
+    <div class="falling text-blue-400/20" style="left: 80%; animation-duration: 15s;"><i data-lucide="ethereum" class="w-16 h-16"></i></div>
 
-    <nav class="max-w-7xl mx-auto px-10 py-10 flex justify-between items-center">
+    <nav class="max-w-7xl mx-auto px-10 py-8 flex justify-between items-center">
         <div class="flex items-center gap-4">
             <div class="w-12 h-12 bg-blue-600 rounded-2xl flex items-center justify-center shadow-lg shadow-blue-500/40">
-                <i data-lucide="bar-chart-big" class="text-white w-7 h-7"></i>
+                <i data-lucide="brain-circuit" class="text-white w-7 h-7"></i>
             </div>
             <span class="text-3xl font-black tracking-tighter uppercase italic">STOXARA</span>
         </div>
-        <div class="bg-white/5 border border-white/10 px-6 py-2 rounded-full">
-            <span class="text-[10px] font-black tracking-[0.3em] text-blue-400 uppercase">Institutional Grade AI</span>
+        <div class="hidden md:block bg-emerald-500/10 border border-emerald-500/20 px-4 py-2 rounded-full">
+            <span class="text-[10px] font-bold text-emerald-400 uppercase tracking-widest flex items-center gap-2">
+                <span class="h-2 w-2 bg-emerald-400 rounded-full animate-pulse"></span> Engine Live
+            </span>
         </div>
     </nav>
 
-    <main class="max-w-6xl mx-auto px-6 py-10 text-center">
-        <h1 class="text-6xl md:text-8xl font-black mb-8 tracking-tighter leading-none">
-            Your AI <span class="gradient-text">Investment Partner</span>
+    <main class="max-w-6xl mx-auto px-6 pt-10 pb-20 text-center">
+        <h1 class="text-6xl md:text-7xl font-black mb-6 tracking-tighter">
+            Next-Gen <span class="gradient-text">Market Intelligence</span>
         </h1>
-        <p class="text-slate-400 text-xl max-w-3xl mx-auto mb-16 leading-relaxed">
-            Stoxara transforms raw market data into actionable wealth intelligence. From beginner guidance to institutional-level stock deep dives.
+        <p class="text-slate-400 text-lg max-w-2xl mx-auto mb-16">
+            Bridging the gap between retail investors and institutional-grade analytics through Artificial Intelligence.
         </p>
 
-        <div class="grid md:grid-cols-2 gap-8 text-left mb-20">
-            
-            <div class="glass-panel p-10">
-                <div class="w-14 h-14 bg-blue-500/20 rounded-2xl flex items-center justify-center mb-6">
-                    <i data-lucide="trending-up" class="text-blue-400 w-8 h-8"></i>
-                </div>
-                <h3 class="text-2xl font-extrabold mb-4">Strategic Trend Forecaster</h3>
-                <p class="text-slate-400 leading-relaxed mb-6">
-                    We don't just show prices; we explain the **"Why."** Stoxara identifies emerging sector rotations and global trends, telling you exactly how to position your capital before the market moves.
+        <div class="grid md:grid-cols-2 gap-8 text-left mb-24">
+            <div class="glass-panel p-8 border-l-4 border-l-blue-500">
+                <h3 class="text-2xl font-bold mb-3 flex items-center gap-3">
+                    <i data-lucide="trending-up" class="text-blue-400"></i> Investment Trends
+                </h3>
+                <p class="text-slate-400 text-sm leading-relaxed">
+                    Stoxara guides you on **how to invest** by identifying macro trends before they hit the mainstream. We simplify complex market movements into actionable strategies for any skill level.
                 </p>
-                <ul class="space-y-3 text-sm font-bold text-slate-300">
-                    <li class="flex gap-2 items-center text-blue-400"><i data-lucide="check-circle-2" class="w-4 h-4"></i> Real-time Trend Detection</li>
-                    <li class="flex gap-2 items-center text-blue-400"><i data-lucide="check-circle-2" class="w-4 h-4"></i> Beginner Investment Roadmaps</li>
-                </ul>
             </div>
 
-            <div class="glass-panel p-10">
-                <div class="w-14 h-14 bg-purple-500/20 rounded-2xl flex items-center justify-center mb-6">
-                    <i data-lucide="search-code" class="text-purple-400 w-8 h-8"></i>
-                </div>
-                <h3 class="text-2xl font-extrabold mb-4">Deep Stock Analysis</h3>
-                <p class="text-slate-400 leading-relaxed mb-6">
-                    Ask any question about any stock. Stoxara analyzes balance sheets, sentiment data, and technical indicators in seconds to provide a comprehensive **360-degree company profile.**
+            <div class="glass-panel p-8 border-l-4 border-l-purple-500">
+                <h3 class="text-2xl font-bold mb-3 flex items-center gap-3">
+                    <i data-lucide="search-code" class="text-purple-400"></i> Deep Stock Analysis
+                </h3>
+                <p class="text-slate-400 text-sm leading-relaxed">
+                    Analyze **any stock** instantly. Get every data point, balance sheet insight, and sentiment score. If you have a question about a ticker, Stoxara has the institutional-grade answer.
                 </p>
-                <ul class="space-y-3 text-sm font-bold text-slate-300">
-                    <li class="flex gap-2 items-center text-purple-400"><i data-lucide="check-circle-2" class="w-4 h-4"></i> Automated Fundamental Analysis</li>
-                    <li class="flex gap-2 items-center text-purple-400"><i data-lucide="check-circle-2" class="w-4 h-4"></i> Every ticker, every data point.</li>
-                </ul>
             </div>
-
         </div>
 
-        <div class="glass-panel py-12 px-6 border-blue-500/30">
-            <h2 class="text-3xl font-black mb-4">Ready to Scale to Millions</h2>
-            <p class="text-slate-400 mb-8 max-w-xl mx-auto italic">"Our mission is to democratize institutional-grade data for the everyday investor."</p>
-            <div class="flex justify-center gap-4">
-                <div class="px-8 py-4 bg-white text-black font-black rounded-2xl cursor-default uppercase text-sm">Revenue Ready</div>
-                <div class="px-8 py-4 bg-blue-600 text-white font-black rounded-2xl cursor-default uppercase text-sm">AI Powered</div>
+        <div class="relative">
+            <div class="absolute -top-10 left-1/2 -translate-x-1/2 bg-blue-600 text-white px-6 py-2 rounded-full text-xs font-black uppercase tracking-widest z-20 shadow-xl">
+                Live AI Terminal
+            </div>
+            <div class="glass-panel p-2 min-h-[700px] relative overflow-hidden">
+                
+                <script src='https://www.noupe.com/embed/019b8a2a637c706ea2ffaf911981d4912d73.js'></script>
+
+                <div id="loading-overlay" class="absolute inset-0 flex flex-col items-center justify-center bg-[#020617]/50 pointer-events-none">
+                    <div class="w-10 h-10 border-4 border-blue-500 border-t-transparent rounded-full animate-spin mb-4"></div>
+                    <p class="text-[10px] font-bold text-slate-500 tracking-[0.3em]">INITIALIZING ANALYST...</p>
+                </div>
             </div>
         </div>
     </main>
 
-    <footer class="py-20 text-center opacity-40">
-        <p class="text-[10px] font-black tracking-[0.6em] uppercase">Stoxara Proprietary Dashboard &bull; Demo v2.0</p>
+    <footer class="py-10 text-center opacity-30 border-t border-white/5">
+        <p class="text-[10px] font-black tracking-[0.5em] uppercase">Stoxara Proprietary Engine &copy; 2026</p>
     </footer>
 
-    <script>lucide.createIcons();</script>
+    <script>
+        lucide.createIcons();
+        // Clear overlay once the page settles
+        window.addEventListener('load', () => {
+            setTimeout(() => {
+                document.getElementById('loading-overlay').style.opacity = '0';
+            }, 3000);
+        });
+    </script>
 </body>
 </html>
