Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
                     <div class="mt-8 flex items-center gap-4">
                         <div class="w-12 h-12 bg-gradient-to-tr from-blue-600 to-purple-600 rounded-full flex items-center justify-center font-black">BV</div>
                         <div>
-                            <p class="font-bold text-white uppercase tracking-tighter">Founder, ByteBasket Innovations</p>
-                            <p class="text-xs text-gray-500 font-bold uppercase tracking-widest">Ethical AI • Simplicity • Long-term Trust</p>
+                            <p class="font-bold text-white uppercase tracking-tighter">Bhavesh Vats</p>
+                            <p class="text-xs text-gray-500 font-bold uppercase tracking-widest">Founder, ByteBasket Innovations</p>
                         </div>
                     </div>
                 </div>
@@ -241,3 +241,4 @@
     <script src='https://www.noupe.com/embed/019b8a2a637c706ea2ffaf911981d4912d73.js'></script>
 </body>
 </html>
+
