Add Google site verification meta tag
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         .pitch-card:hover { border-color: #3b82f6; background: rgba(255,255,255,0.04); transform: translateY(-5px); }
         .slide-tag { font-size: 10px; font-weight: 800; color: #4b5563; text-transform: uppercase; letter-spacing: 2px; display: block; margin-bottom: 8px; }
     </style>
+    <meta name="google-site-verification" content="jDf0fcbxNTudZP5e1ZVLWZ9I3EQwykavRXK8kBTwmJQ" />
 </head>
 <body>
 
@@ -241,4 +242,5 @@
     <script src='https://www.noupe.com/embed/019b8a2a637c706ea2ffaf911981d4912d73.js'></script>
 </body>
 </html>
+
 
